# ansistrip

./: README.md  pyproject.toml
ansistrip/: ansistrip.py
